--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Jesse, Jacco, Gylianto, Tolga and Robin",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongodb": "^6.4.0"
   }
