--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "Jesse, Jacco, Gylianto, Tolga and Robin",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "express-session": "^1.18.0",
     "mongodb": "^6.4.0",
     "request": "^2.88.2"
   }
