--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^6.4.0",
     "request": "^2.88.2",
     "swiper": "^11.0.7",
+    "tether-drop": "^1.4.2",
     "xss": "^1.0.15"
   }
 }
