--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
     "request": "^2.88.2",
+    "slugify": "^1.6.6",
     "swiper": "^11.0.7",
     "tether-drop": "^1.4.2",
     "xss": "^1.0.15"
