--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "a platform to match movies and recipes with users for a unique experience.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint server.js",
+    "lint-fix": "eslint --fix server.js"
   },
   "repository": {
     "type": "git",
@@ -27,5 +29,17 @@
     "swiper": "^11.0.7",
     "tether-drop": "^1.4.2",
     "xss": "^1.0.15"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.0.2",
+    "@eslint/js": "^9.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "globals": "^15.0.0"
+    
   }
+  
 }
