--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
+    "minify": "^11.1.1",
     "mongodb": "^6.4.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
