--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
+    "minify": "^11.1.1",
     "mongodb": "^6.4.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
@@ -39,7 +40,5 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
     "globals": "^15.0.0"
-    
   }
-  
 }
